--- a/front/user_dashboard.html
+++ b/front/user_dashboard.html
@@ -50,7 +50,7 @@
           <th>Score</th>
           <th>Correct</th>
           <th>Time</th>
-          <th>Date</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody id="scoreTable"></tbody>
@@ -127,7 +127,7 @@ async function loadBatches() {
 ============================= */
 async function loadTestHistory() {
   try {
-    const res = await fetch("/api/attempt/my-attempts", {
+    const res = await fetch("/api/attempts/my-attempts", {
       headers: {
         Authorization: "Bearer " + localStorage.getItem("token")
       }
@@ -156,9 +156,16 @@ async function loadTestHistory() {
         <tr>
           <td>${t.test_name}</td>
           <td>${t.score}</td>
-          <td>${t.correct_answers}/${t.total_questions}</td>
-          <td>${t.time_taken} min</td>
-          <td>${new Date(t.submitted_at).toLocaleString()}</td>
+          <td>${t.score}/${t.total_questions}</td>
+          <td>${new Date(t.completed_at).toLocaleString()}</td>
+          <td>
+            <a
+              href="results.html?attempt_id=${t.attempt_id}"
+              class="view-btn"
+            >
+              View Result
+            </a>
+          </td>
         </tr>
       `;
     });
