--- a/front/admin_dashboard.html
+++ b/front/admin_dashboard.html
@@ -75,6 +75,18 @@
         <p>Create a new batch for students to join and access study materials.</p>
         <a href="create-batch.html" class="btn">Go to Create Batch</a>
       </div>
+      <!-- View Enrollments -->
+      <div class="dashboard-card">
+        <h3>📋 View Enrollments</h3>
+        <p>View all enrollment requests and manage them.</p>
+        <a href="view_requests.html" class="btn">Go to View Requests</a>
+      </div>
+      <!-- Update Enrollments-->
+       <div class="dashboard-card">
+        <h3>✏️ Update Enrollments </h3>
+        <p>Update the enrollment status of students in various batches.</p>
+        <a href="status_updation.html" class="btn">Go to Update Enrollments</a>
+      </div>
 
       <!-- Grant access -->
       <div class="dashboard-card">
@@ -89,7 +101,6 @@
         <p>Revoke the access from the users to view the batch materials and tests.</p>
         <a href="revoke_access.html" class="btn">Go to Revoke Access</a>
       </div>
-
         <!-- Upload Materials -->
       <div class="dashboard-card">
         <h3>📘 Upload Study Materials</h3>
@@ -98,11 +109,11 @@
       </div>
       
       <!-- Change Pdf  -->
-      <div class="dashboard-card">
+      <!--<div class="dashboard-card">
         <h3>📘 Edit pdf  </h3>
         <p>Change the pdf files for the batch materials.</p>
         <a href="change_material.html" class="btn">Go to Change Material</a>
-      </div>
+      </div>-->
 
       
 
@@ -119,22 +130,25 @@
         <p>Update or modify test details, questions, and tags.</p>
         <a href="edit_test.html" class="btn">Go to Edit Page</a>
       </div>
-
-      <!-- Analytics -->
+      <!-- Upload Image for Test -->
       <div class="dashboard-card">
-        <h3>📊 Analytics</h3>
-        <ul>
-          <li>Total Users: <span id="totalUsers">2</span></li>
-          <li>Tests Published: <span id="totalTests">0</span></li>
-          <li>Materials Uploaded: <span id="totalMaterials">2</span></li>
-        </ul>
+        <h3>✏️ Upload Question Images</h3>
+        <p>Upload images for questions in a specific test.</p>
+        <a href="image_upload.html" class="btn">Go to Upload Page</a>
       </div>
     </div>
+    <!--Create Notification-->
+    <div class="dashboard-grid" style="margin-top: 20px;">
+      <div class="dashboard-card" style="width: 100%;">
+        <h3>🔔 Create Notification</h3>
+        <p>Send important announcements or updates to all users.</p>
+        <a href="create_notification.html" class="btn">Go to Notification Page</a>
+      </div>
   </section>
 
   <!-- 🔹 Footer -->
   <footer>
-    <p>© 2025 Elumalai's Chemistry Academy</p>
+    <p>© 2026 Elumalai's Chemistry Academy</p>
   </footer>
 
   <script>
