--- a/front/results.html
+++ b/front/results.html
@@ -42,19 +42,6 @@
       text-align: center;
     }
 
-    .chart-box h3 {
-      margin-bottom: 10px;
-    }
-
-    .info h2 {
-      margin: 0 0 10px;
-    }
-
-    .info p {
-      margin: 6px 0;
-      color: #555;
-    }
-
     .question-card {
       background: #fff;
       border-radius: 8px;
@@ -62,15 +49,25 @@
       margin-bottom: 15px;
     }
 
-    .question-card h4 {
-      margin-bottom: 10px;
+    .question-img {
+      max-width: 100%;
+      margin: 10px 0;
+      border-radius: 6px;
     }
 
     .option {
-      padding: 8px 12px;
-      margin: 5px 0;
-      border-radius: 5px;
+      padding: 10px;
+      margin: 6px 0;
+      border-radius: 6px;
       border: 1px solid #ddd;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .option img {
+      max-width: 120px;
+      border-radius: 4px;
     }
 
     .correct {
@@ -81,10 +78,6 @@
     .wrong {
       background: #fee2e2;
       border-color: #ef4444;
-    }
-
-    .chosen {
-      font-weight: bold;
     }
 
     .reference {
@@ -122,21 +115,38 @@
       <p><strong id="scoreText"></strong></p>
     </div>
 
-    <div class="info">
+    <div>
       <h2 id="testName">Loading...</h2>
       <p>Total Questions: <span id="totalQ"></span></p>
       <p>Correct Answers: <span id="correctQ"></span></p>
       <p>Attempted On: <span id="attemptDate"></span></p>
     </div>
   </div>
+<div style="margin: 20px 0;">
+  <a href="user_dashboard.html"
+     style="
+       display: inline-block;
+       padding: 10px 18px;
+       background: #1e293b;
+       color: #fff;
+       border-radius: 6px;
+       text-decoration: none;
+       font-weight: 600;
+     ">
+    ⬅ Go to Dashboard
+  </a>
+</div>
+
 
   <!-- ===== QUESTIONS REVIEW ===== -->
   <div id="questionsContainer"></div>
 
 </div>
 
+
+
 <footer>
-  © 2025 Elumalai's Chemistry Academy
+  © 2026 Elumalai's Chemistry Academy
 </footer>
 
 <script>
@@ -148,6 +158,16 @@ if (!token) window.location.href = "login.html";
 const params = new URLSearchParams(window.location.search);
 const attemptId = params.get("attempt_id");
 if (!attemptId) alert("Invalid attempt");
+
+/* ================= CONTEXT ================= */
+let batchName = "";
+let testName = "";
+
+/* ================= IMAGE PATH ================= */
+function imagePath(filename) {
+  if (!filename) return "";
+  return `/uploads/questions/${batchName}/${testName}/${filename}`;
+}
 
 /* ================= LOAD RESULT ================= */
 async function loadResult() {
@@ -163,7 +183,10 @@ async function loadResult() {
 
   const r = data.result;
 
-  /* ===== SUMMARY ===== */
+  /* 🔥 normalize folder names */
+  batchName = r.batch_name.replace(/\s+/g, "_");
+  testName  = r.test_name.replace(/\s+/g, "_");
+
   document.getElementById("testName").innerText = r.test_name;
   document.getElementById("totalQ").innerText = r.total_questions;
   document.getElementById("correctQ").innerText = r.correct_answers;
@@ -173,31 +196,34 @@ async function loadResult() {
   document.getElementById("scoreText").innerText =
     `${r.score} / ${r.total_questions}`;
 
-  buildChart(
-    r.score,
-    r.total_questions - r.score
-  );
+  buildChart(r.score, r.total_questions - r.score);
 
-  /* ===== QUESTIONS ===== */
   const qc = document.getElementById("questionsContainer");
+  qc.innerHTML = "";
 
   r.questions.forEach((q, i) => {
     const div = document.createElement("div");
     div.className = "question-card";
 
     div.innerHTML = `
-      <h4>Q${i + 1}. ${q.question_text}</h4>
-
-      ${renderOption("A", q.option_a_text, q)}
-      ${renderOption("B", q.option_b_text, q)}
-      ${renderOption("C", q.option_c_text, q)}
-      ${renderOption("D", q.option_d_text, q)}
+      <h4>Q${i + 1}. ${q.question_text || ""}</h4>
 
       ${
-        q.reference_link
+        q.question_image
+          ? `<img src="${imagePath(q.question_image)}" class="question-img">`
+          : ""
+      }
+
+      ${renderOption("A", q.option_a_text, q.option_a_image, q)}
+      ${renderOption("B", q.option_b_text, q.option_b_image, q)}
+      ${renderOption("C", q.option_c_text, q.option_c_image, q)}
+      ${renderOption("D", q.option_d_text, q.option_d_image, q)}
+
+      ${
+        q.reference_video_url
           ? `<div class="reference">📘 Reference:
-              <a href="${q.reference_link}" target="_blank">
-                ${q.reference_link}
+              <a href="${q.reference_video_url}" target="_blank">
+                ${q.reference_text}
               </a>
             </div>`
           : ""
@@ -209,16 +235,25 @@ async function loadResult() {
 }
 
 /* ================= OPTION RENDER ================= */
-function renderOption(letter, text, q) {
-  if (!text) return "";
+function renderOption(letter, text, image, q) {
+  if (!text && !image) return "";
 
   let cls = "option";
-  if (q.correct_option === letter) cls += " correct";
-  if (q.selected_option === letter && q.correct_option !== letter)
-    cls += " wrong";
-  if (q.selected_option === letter) cls += " chosen";
 
-  return `<div class="${cls}">${letter}. ${text}</div>`;
+  const isSelected = q.selected_option === letter;
+  const isCorrect = q.correct_answer === letter;
+
+  if (isSelected && isCorrect) cls += " correct";
+  else if (isSelected && !isCorrect) cls += " wrong";
+  else if (!isSelected && isCorrect) cls += " correct";
+
+  return `
+    <div class="${cls}">
+      <strong>${letter}.</strong>
+      <span>${text || ""}</span>
+      ${image ? `<img src="${imagePath(image)}">` : ""}
+    </div>
+  `;
 }
 
 /* ================= CHART ================= */
